# nanodet_MNN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bash/: build_android.sh  build_mac.sh  run_anroid.sh  run_mac.sh
mnn/lib/: libMNN.dylib
